--- a/valueEditor/valueEditor.csproj
+++ b/valueEditor/valueEditor.csproj
@@ -47,12 +47,19 @@
     <Compile Include="Content.cs" />
     <Compile Include="ControlExtensions.cs" />
     <Compile Include="CustomRichTextBox.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="CustomRichTextBox.Designer.cs">
       <DependentUpon>CustomRichTextBox.cs</DependentUpon>
     </Compile>
     <Compile Include="FileHelper.cs" />
+    <Compile Include="InputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputBox.Designer.cs">
+      <DependentUpon>InputBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LinesChangedEventArgs.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,27 +69,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="SyncRichTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="SyncRichTextBox.Designer.cs">
-      <DependentUpon>SyncRichTextBox.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="CustomRichTextBox.resx">
-      <DependentUpon>CustomRichTextBox.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
